--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,12 +50,14 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     # Add user sources here
     Lib/oled/Src/oled.c
     Lib/oled/Src/font.c
+    Lib/NRF24L01/Src/NRF24L01.c
 )
 
 # Add include paths
 target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
     # Add user defined include paths
     Lib/oled/Inc
+    Lib/NRF24L01/Inc
 )
 
 # Add project symbols (macros)
